# dct-io

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: smoke.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_read.rs  fuzz_roundtrip.rs
src/: lib.rs
