[package]
name = "dct-io-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.dct-io]
path = ".."

# Optimize for fuzzing speed.
[profile.release]
debug = 1

[[bin]]
name = "fuzz_read"
path = "fuzz_targets/fuzz_read.rs"
test = false
doc = false

[[bin]]
name = "fuzz_roundtrip"
path = "fuzz_targets/fuzz_roundtrip.rs"
test = false
doc = false
